--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "buildCommand": "cd apps/web && bun install && bun run build",
+    "buildCommand": "cd apps/web && bun run build",
     "outputDirectory": "apps/web/.next",
     "framework": "nextjs",
     "installCommand": "bun install"
