--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,3 @@
 {
-    "buildCommand": "cd apps/web && bun run build",
-    "outputDirectory": "apps/web/.next",
-    "framework": "nextjs",
-    "installCommand": "bun install"
+    "bunVersion": "1.x"
 }
